# esp32s3_audio_streaming

./: .gitmodules  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.cpp
main/audio/: audio_config.h  audio_processor.cpp  audio_processor.h  i2s_codec.cpp  i2s_codec.h
main/board/: esp32s3_board.cpp  esp32s3_board.h
main/frame/: README.md
main/frame-codebase/tests/: test_text_display_delay.py
main/frame/customized_tests/: test_check_battery.py  test_rotate_image.py
main/network/: udp_server.cpp  udp_server.h  wifi_manager.cpp  wifi_manager.h
scripts/: udp_client.cpp  udp_client.py
